# IndexraDB

./: .gitignore  CMakeLists.txt  EXAMPLES.md  README.md  db_demo  db_demo_ml  db_demo_nlq  db_engine  repro_ml  repro_old  verify.ps1  verify.sh
data/: schema.txt  users.db
demo_data/: grades.db  schema.txt  students.db
include/: bptree.hpp  database.hpp  fileio.hpp  join.hpp  llm_bridge.hpp  ml.hpp  query.hpp  table.hpp
include/nlq/: executor.hpp  intent.hpp  parser.hpp  time.hpp
include/nlq_ml/: embed.hpp  intent.hpp  normalize.hpp  pipeline.hpp  slots.hpp
llm_server/: .env  app.py  chain.py
llm_server/prompts/: planner_prompt.txt
models/: intent.onnx  slots.onnx  train_intent.py  train_slots.py  training_guide.md
models/data/: generate_synthetic_data.py  intent_data.csv  slot_data.json
src/: database.cpp  demo.cpp  demo_ml.cpp  demo_nlq.cpp  fileio.cpp  join.cpp  llm_bridge.cpp  main.cpp  ml.cpp  query.cpp  repro_ml.cpp  repro_old.cpp  table.cpp
src/nlq/: executor.cpp  intent.cpp  parser.cpp  time.cpp
src/nlq_ml/: embed.cpp  intent.cpp  normalize.cpp  pipeline.cpp  slots.cpp
src/testers/: verify_delete.cpp
testers/: test_engine.py  test_fix.py  test_fuzzy_nlq.py  test_general_nlq.py  test_ml.py  test_ml_nlq.py  test_nlq.py  test_nlq_update.py
